--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
-  </head>
-  <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GoIt-11</title>
+  <link rel="stylesheet" href="./sass/index.scss" />
+  <link rel="stylesheet" href="/node_modules/simplelightbox/dist/simple-lightbox.min.css">
+</head>
+
+<body>
+  <form class="search-form" id="search-form">
+    <div class="search-container">
+      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." class="search-input" />
+      <button type="submit" class="search-btn">&#128269;</button>
+    </div>
+
+  </form>
+
+  <div class="gallery">
+    <!-- Картки зображень -->
+  </div>
+
+  <button type="button" class="load-more">Load more</button>
+
+
+  <script src="./js/index.js" type="module"></script>
+</body>
+
 </html>
